# mmr2

./: README.md
FlyClient_Ethereum_Prototype/: README.md
FlyClient_Ethereum_Prototype/flyclient_ethereum/: Cargo.toml  README.md  block_headers.csv
FlyClient_Ethereum_Prototype/flyclient_ethereum/src/: lib.rs  request_response.rs
FlyClient_Ethereum_Prototype/flyclient_ethereum/src/mmr/: mod.rs  persistent_mmr.rs  proof.rs
FlyClient_Ethereum_Prototype/flyclient_ethereum/tests/: fuzzy_tests.rs  math.rs  mmr_tests.rs  proof.rs  proof_size.rs
FlyClient_Ethereum_Prototype/light_client/: .gitignore  Cargo.toml  README.md
FlyClient_Ethereum_Prototype/light_client/.cargo/: config
FlyClient_Ethereum_Prototype/light_client/src/: main.rs  pow_verifier.rs
FlyClient_Ethereum_Prototype/light_server/: .gitignore  Cargo.toml  README.md
FlyClient_Ethereum_Prototype/light_server/src/: block_header.rs  csv.rs  main.rs  proof_generator.rs  rpc.rs
FlyClient_Ethereum_Prototype/measurements/: Cargo.toml  measurements.csv  measurementsContinuation.csv  measurementsTradeoff.csv  proof_size.csv  visualize_continuation_subplots_new.py  visualize_measurements_subplots.py  visualize_proof_size_subplots.py  visualize_tradeoff.py  visualize_tradeoff_new.py
