[package]
name = "light_client"
version = "0.1.0"
authors = ["Patrick Weißkirchner <patrick.weiszkirchner@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
flyclient_ethereum = { path = "../flyclient_ethereum/" }
ethash = { path = "../parity-ethereum/ethash/" }
serde_json = "1.0.39"
ethereum-types = "0.4.2"
rlp = { version = "0.3.0", features = ["ethereum"] }
tiny-keccak = "1.4.2"
ethbloom = "0.6.2"
hex = "0.3.2"
structopt = "0.2"
log = "0.4.0"
env_logger = "0.6.1"
common-types = { path = "../parity-ethereum/ethcore/types" }
parity-bytes = "0.1"
rayon = "1.0.3"
csv = "1.0.7"
