[package]
name = "light_server"
version = "0.1.0"
authors = ["Patrick Weißkirchner <patrick.weiszkirchner@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
flyclient_ethereum = { path = "../flyclient_ethereum/" }
web3 = "0.7.0"
serde_json = "1.0.39"
serde = {version = "1.0.90", features = ["derive"]}
csv = "1.0.7"
tokio-core = "0.1.17"
crossbeam-channel = "0.3.8"
structopt = "0.2"
common-types = { path = "../parity-ethereum/ethcore/types" }
ethereum-types = "0.4"
ethbloom = "0.6.2"
parity-bytes = "0.1"
ctrlc = "3.1.2"
