[package]
name = "measurements"
version = "0.1.0"
authors = ["Patrick Weißkirchner <patrick.weiszkirchner@gmail.com>"]
edition = "2018"

[dependencies]
flyclient_ethereum = { path = "../flyclient_ethereum" }
ethereum-types = "0.5.2"
serde = { version = "1.0.90", features = ["derive"]}
serde_json = "1.0.39"
rand = "0.6"
common-types = { path = "../parity-ethereum/ethcore/types" }
csv = "1.0.7"
